# DZ-youtube-analytics-project

./: pyproject.toml
homework-6/: main.py
src/: channel.py  playlist.py  video.py
