[tool.poetry]
name = "dz-youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Dmitry <kip@gmail.com>"]
readme = "README.md"
packages = [{include = "dz_youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
